# duckdb-distributed-execution

./: .gitignore  AGGREGATION_PUSHDOWN_ANALYSIS.md  AGGREGATION_PUSHDOWN_BUG_FIXED.md  BUGFIX_ONE_CHUNK_LIMIT.md  BUILD_SUCCESS_SUMMARY.md  CANDISTRIBUTE_ANALYSIS.md  CHANGELOG.md  CHECK_RESULTS.md  CMakeLists.txt  COMPLETE_JOURNEY.md  CONTRIBUTING.md  DISTRIBUTED_EXECUTION_ARCHITECTURE.md  DISTRIBUTED_SYSTEM_DOCS.md  FINAL_STATUS.md  FINAL_TEST_FIX_SUMMARY.md  FORMATTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LOGGING_AND_VERIFICATION_COMPLETE.md  Makefile  NATURAL_PARALLELISM_FINDINGS.md  NATURAL_PARALLELISM_INSIGHTS.md  NATURAL_PARALLELISM_PLAN.md  PROTOBUF_INTEGRATION.md  PROTOBUF_MIGRATION_COMPLETE.md  PROTOBUF_ONEOF_ARCHITECTURE.md  REFACTORING_SUMMARY.md  SESSION_SUMMARY.md  STEP1_COMPLETE_SUMMARY.md  STEP1_PIPELINE_TASKS_COMPLETE.md  STEP2_COMPLETE_SUMMARY.md  STEP2_TASK_DISTRIBUTION_COMPLETE.md  STEP3_WORKER_EXECUTION_COMPLETE.md  STEP4A_QUERY_ANALYSIS_COMPLETE.md  STEP4_COMPLETE.md  STEP5_COMPLETE.md  STEP6_COMPLETE_SUMMARY.md  STEPS_1_2_3_COMPLETE.md  STEP_BY_STEP_PROGRESS.md  TODAYS_WORK_SUMMARY.md  (+22 more)
.github/workflows/: MainDistributionPipeline.yml
benchmark/: README.md  large_table.sql  medium_table.sql  small_table.sql
docs/: EXTENSION_LOADING.md  EXTENSION_LOADING_PRAGMA.md  NEXT_README.md  PROTOBUF_MIGRATION.md  README.md
scripts/: bootstrap-template.py
src/: arrow_utils.cpp  base_query_recorder.cpp  distributed_client.cpp  distributed_create_index.cpp  distributed_delete.cpp  distributed_flight_client.cpp  distributed_flight_server.cpp  distributed_insert.cpp  distributed_protocol.cpp  distributed_server.cpp  distributed_server_function.cpp  distributed_server_main.cpp  distributed_table_function.cpp  distributed_table_scan_function.cpp  duckherder_extension.cpp  duckherder_extension_instance_state.cpp  logical_remote_create_index.cpp  motherduck_catalog.cpp  motherduck_catalog_entry.cpp  motherduck_extension.cpp  motherduck_index_catalog_entry.cpp  motherduck_pragmas.cpp  motherduck_schema.cpp  motherduck_schema_catalog_entry.cpp  motherduck_storage.cpp  motherduck_table.cpp  motherduck_table_catalog_entry.cpp  motherduck_table_metadata.cpp  motherduck_transaction.cpp  motherduck_transaction_manager.cpp  physical_distributed_insert.cpp  physical_distributed_table_scan.cpp  query_execution_stats_query_function.cpp  query_history_query_function.cpp  query_recorder.cpp  query_recorder_factory.cpp  test_distributed_client.cpp
src/client/: distributed_alter_table.cpp  distributed_client.cpp  distributed_create_index.cpp  distributed_delete.cpp  distributed_flight_client.cpp  distributed_insert.cpp  distributed_table_scan_function.cpp  duckherder_catalog.cpp  duckherder_index_catalog_entry.cpp  duckherder_pragmas.cpp  duckherder_schema_catalog_entry.cpp  duckherder_storage.cpp  duckherder_table_catalog_entry.cpp  duckherder_transaction.cpp  duckherder_transaction_manager.cpp  entry_lookup_info_hash_utils.cpp  logical_distributed_load.cpp  logical_remote_alter_table.cpp  motherduck_catalog.cpp  motherduck_schema_catalog_entry.cpp  motherduck_storage.cpp  motherduck_table_catalog_entry.cpp  motherduck_transaction.cpp  motherduck_transaction_manager.cpp  physical_distributed_load.cpp
src/include/: arrow_utils.hpp  base_query_recorder.hpp  distributed_client.hpp  distributed_create_index.hpp  distributed_delete.hpp  distributed_flight_client.hpp  distributed_flight_server.hpp  distributed_insert.hpp  distributed_protocol.hpp  distributed_server.hpp  distributed_server_function.hpp  distributed_table_function.hpp  distributed_table_scan_function.hpp  duckherder_extension.hpp  duckherder_extension_instance_state.hpp  logical_remote_create_index.hpp  motherduck_catalog.hpp  motherduck_catalog_entry.hpp  motherduck_extension.hpp  motherduck_index_catalog_entry.hpp  motherduck_pragmas.hpp  motherduck_schema.hpp  motherduck_schema_catalog_entry.hpp  motherduck_storage.hpp  motherduck_table.hpp  motherduck_table_catalog_entry.hpp  motherduck_table_metadata.hpp  motherduck_transaction.hpp  motherduck_transaction_manager.hpp  physical_distributed_insert.hpp  physical_distributed_table_scan.hpp  query_common.hpp  query_execution_stats_query_function.hpp  query_history_query_function.hpp  query_recorder.hpp  query_recorder_factory.hpp
src/include/client/: distributed_alter_table.hpp  distributed_client.hpp  distributed_create_index.hpp  (+19 more)
src/proto/: CMakeLists.txt  distributed.proto
src/server/: distributed_executor.cpp  distributed_flight_server.cpp  distributed_server_function.cpp  distributed_server_main.cpp  duckling_catalog.cpp  duckling_index_catalog_entry.cpp  duckling_schema_catalog_entry.cpp  duckling_storage.cpp  duckling_table_catalog_entry.cpp  duckling_transaction.cpp  duckling_transaction_manager.cpp  worker_manager.cpp  worker_node.cpp
src/utils/: catalog_utils.cpp  network_utils.cpp  readiness_probe.cpp  thread_utils.cpp  time_utils.cpp
test/cpp/: test_distributed_flight.cpp
test/data/: sample_employees.duckdb
test/sql/: alter_table.test  distributed_basic.test  distributed_partitioning.test  enum_type_support.test  extension.test  group_by_distributed.test  index_operations.test  large_table_partitioning.test  list_type_support.test  local_execution.test  modulo_partitioning.test  multi_row_group_partitioning.test  natural_parallelism.test  no_worker_execution.test  parallel_aggregation.test  quack.test  query_execution_stats.test  query_stats.test  range_partitioning.test  registration.test  remote_execution.test  row_group_partitioning.test  row_group_partitioning_medium.test  server_db_path.test  setup_distributed_server.test  small_table_optimization.test  table_operations.test  test_extension_loading.test  test_extension_loading_interactive.md  test_registration.test  test_worker_registration.test  type_support.test
test/unittest/: CMakeLists.txt  test_arrow_enum_conversion.cpp  test_query_plan_analyzer.cpp
unit/: test_arrow_enum_conversion.cpp  test_distributed_flight.cpp  test_query_plan_analyzer.cpp
(+50 files in other folders)
